# textbook-marketplace-backend

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: clean_and_gen.sh  gen_fake_data.sh  gen_msgs.sh  gen_suser.sh  rm_db_data.sh  run.sh  run_tests.sh
textbook_marketplace/: manage.py  pytest.ini
textbook_marketplace/api/: urls.py
textbook_marketplace/chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  tests.py  urls.py  views.py
textbook_marketplace/chat/management/commands/: generate_fake_messages.py
textbook_marketplace/chat/migrations/: 0001_initial.py
textbook_marketplace/marketplace/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
textbook_marketplace/marketplace/management/commands/: generate_fake_textbooks.py  generate_fake_users.py
textbook_marketplace/marketplace/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions_and_more.py  0003_alter_textbook_image.py  0004_block.py  0005_report.py  0006_textbook_subject.py
textbook_marketplace/textbook_marketplace/: asgi.py  consumers.py  settings.py  urls.py  wsgi.py
